--- a/Project/ECCV2018_MSRN/index.html
+++ b/Project/ECCV2018_MSRN/index.html
@@ -101,7 +101,7 @@ var _hmt = _hmt || [];
 </table>
 
 <br>
-<h2><p><font size="6"><b>Visual Results</b></font></p></h2>
+<h2><p><font size="6"><b>PSNR/SSIM Results</b></font></p></h2>
 <hr/>
 <table align="center">
 <tr>
