add new project

--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -60,13 +60,12 @@ var _hmt = _hmt || [];
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Author names alphabetically, Main contributor*</i></font></a></b>
+	<b><a><font size="3"> Author names alphabetically, * Main contributor</i></font></a></b>
 </td>
-</table>
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Contact us:&nbsp;&nbsp;&nbsp;<i>cvjunchengli@gmail.con</i></font></a></b>
+	<b><a><font size="3"> Contact us:&nbsp;&nbsp;&nbsp;<i>This achievement was completed during the visit of the Chinese University of Hong Kong</i></font></a></b>
 </td>
 </table>
 
@@ -74,7 +73,7 @@ var _hmt = _hmt || [];
 <br><br>
 <table align="center">
 <tr>
-	<td align="center"><embed src="Head.png" width="800"></td>
+	<td align="center"><embed src="Head.png" width="600"></td>
 </tr>
 </table>
 
