add new project

--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -60,12 +60,12 @@ var _hmt = _hmt || [];
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Author names alphabetically, * Main contributor</i></font></a></b>
+	<b><a><font size="3"> Author names alphabetically, * Main contributor</font></a></b>
 </td>
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Contact us:&nbsp;&nbsp;&nbsp;<i>This achievement was completed during the visit of the Chinese University of Hong Kong</i></font></a></b>
+	<b><a><font size="3"> This achievement was completed during the visit of the Chinese University of Hong Kong</font></a></b>
 </td>
 </table>
 
