--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -57,10 +57,14 @@ var _hmt = _hmt || [];
 <b><a><font size="3">East China Normal University</font></a></b>&nbsp;&nbsp;&nbsp;&nbsp;
 <sup><font size="2">2</font></sup>
 <b><a><font size="3">The Chinese University of Hong Kong</font></a></b>&nbsp;&nbsp;&nbsp;&nbsp;
+
 <br>
-<b><a><font size="3"> Author names alphabetically, * Main contributor</font></a></b>
+<br>&nbsp;
+	<b><a><font size="3"> Author names alphabetically, * Main contributor</font></a></b>
+
 <br>
-<b><a><font size="3"> This achievement was completed during the visit of the Chinese University of Hong Kong</font></a></b>
+<br>&nbsp;
+	<b><a><font size="3"> This achievement was completed during the visit of the Chinese University of Hong Kong</font></a></b>
 </td>
 </table>
 
@@ -94,7 +98,7 @@ var _hmt = _hmt || [];
 <hr/>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=900 src="SeaNet.png"></td>
+	<td align="center"><img border=0 width=800 src="SeaNet.png"></td>
 </tr>
 </table>
 
