add new project

--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 
 <table align="center">
 <td align="center">
-<h1>Multi-scale Residual Network for Image Super-Resolution</h1>
+<h1>Soft-edge Assisted Network for Single Image Super-Resolution</h1>
 <h3>
 	<font size="3"><b>Faming Fang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="https://junchenglee.com/" target="_blank"><font size="3"><b>Juncheng Li</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
