add new project

--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Author names alphabetically</font></a></b>
+	<b><a><font size="3"> Author names alphabetically &nbsp;&nbsp;&nbsp;&nbsp; Contact us: cvjunchengli@gmail.con</font></a></b>
 
 <br>
 <br>&nbsp;
