add new project

--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         One paper was submitted to NeurlPS 2020.</a>
     </li>
     <li>
-        One paper was submitted to ACM MM 2020, image deblurring. (Guided)</a>
-    </li>
-    <li>
         One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
     </li>
     <li>
@@ -342,12 +339,16 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
+        
+        <div align= "center">
+            <img src="recommend/LJC.jpeg" width="200" height="200" /> 
+        </div> 
         <div align= "center">
         <b>My WeChat (please indicate the purpose)</b> </br>
         </div>
         <div align= "center">
-            <img src="recommend/LJC.jpeg" width="200" height="200" /> 
-        </div>    
+        <b>Any questions or cooperation are welcome.</b> </br>
+        </div>   
 </section>
 
 
