--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
+    <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor</b></font></p>
+    <p style="margin: 0; padding-left: 1rem"><font color="red"><b># : My idea, implemented by others</b></font></p>
     <li>
         <b>【3】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
@@ -165,11 +167,10 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
-        <font color="red"><b>【Oral】</b></font>
         </br>
-        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW, Oral</b></font>), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
 
@@ -182,7 +183,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (<font color="red"><b>ECCV, Top Conference</b></font>), 2018.</i>
     </li>
