--- a/index.html
+++ b/index.html
@@ -148,6 +148,22 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
     <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor</b></font></p>
     <p style="margin: 0; padding-left: 1rem"><font color="red"><b># : My idea, implemented by others</b></font></p>
+    </br>
+
+    <li>
+        <b>【5】 Multi-level Edge Features Guided Network for Image Denoising </b> </br>
+        </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">will coming soon</i> </br>
+    </li>
+
+    <li>
+        <b>【4】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
+        </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">will coming soon</i> </br>
+    </li>
+
     <li>
         <b>【3】 Soft-edge Assisted Network for Single Image Super-Resolution </b> </br>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
@@ -155,7 +171,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         【SCI-1, IF=9.340】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, <b>Main contributor*</b></font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -176,9 +192,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【1】Multi-scale Residual Network for Image Super-Resolution </b> </br>
-        <!--.
-        <a href="http://openaccess.thecvf.com/content_ECCV_2018/papers/Juncheng_Li_Multi-scale_Residual_Network_ECCV_2018_paper.pdf">[Paper]</a>
-        -->
         <a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
