--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a>   Number of citations: 179</br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
-Long-term co-authors: Kangfu Mei, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
+Long-term co-authors: Kangfu MEI, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
 </p>
 
 <p style="font-size: 0.8rem;">
-Email: cvjunchengli@gmail.com
+Email: cvjunchengli@gmail.com or 51164500049@stu.ecnu.edu.cn
 </p>
 
 <!-- <p style="font-size: 1rem; color:red">
@@ -58,18 +58,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
-    <li>
-        One paper was submitted to NeurlPS 2020.</a>
-    </li>
-    <li>
-        One paper was submitted to IEEE TCSVT 2020, image super-resolution.</a>
-    </li>
-    <li>
-        One paper was submitted to IEEE TMM 2020, low-light image enhancemen. (Guided)</a>
-    </li>
-    <li>
-        One paper was submitted to IEEE TNNLS 2019, image denoising.</a>
-    </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
     </li>
@@ -147,28 +135,35 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">My Works</h1>
     <p style="margin: 0; padding-left: 1rem"><font color="red"><b>* : Main contributor</b></font></p>
-    <p style="margin: 0; padding-left: 1rem"><font color="red"><b># : My idea, implemented by others</b></font></p>
+    <p style="margin: 0; padding-left: 1rem"><font color="red"><b># : Joint first authors</b></font></p>
     </br>
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
         </br>
+        <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">will coming soon</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
     </li>
 
     <li>
-        <b>【5】 Multi-level Edge Features Guided Network for Image Denoising </b> </br>
+        <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">will coming soon</i> </br>
-    </li>
-
-    <li>
-        <b>【4】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
-        </br>
+        <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">will coming soon</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
+    </li>
+
+    <li>
+        <b>【4】 Multi-level Edge Features Guided Network for Image Denoising </b> </br>
+        【SCI-1, IF=8.739】
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
     </li>
 
     <li>
@@ -193,7 +188,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW, Oral</b></font>), 2019.</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop, Oral Presentation</b></font>), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
 
@@ -214,7 +209,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
-        <b>【8】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
+        <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
         <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
@@ -222,7 +217,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">arXiv preprint arXiv: 2006.13511.</i>
     </li>
     <li>
-        <b>【7】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
+        <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
         [Code] 【SCI-2, IF=3.745】
         </br>
@@ -231,25 +226,17 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
     </li>
     <li>
-        <b>【6】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
+        <b>【4】HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop, AIM2019 Winner Award</b></font>), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
     <li>
-        <b>【5】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
-        <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
-        </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCVW</b></font>), 2019.</i></br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
-    </li>
-    <li>
-        <b>【4】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
+        <b>【3】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         【SCI-3, IF=2.004】
@@ -259,7 +246,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
     </li>
     <li>
-        <b>【3】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
+        <b>【2】Progressive Feature Fusion Network for Realistic Image Dehazing</b> </br>
         <a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
         </br>
@@ -268,7 +255,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
     <li>
-        <b>【2】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
+        <b>【1】An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
         </br>
@@ -277,10 +264,25 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
     <li>
+</section>
+
+<p></p>
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Competition Report</h1>
+    <li>
+        <b>【2】AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
+        <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
+        </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop</b></font>), 2019.</i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
+    </li>
+    <li>
         <b>【1】NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (<font color="red"><b>CVPRW</b></font>), 2018. </i></br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (<font color="red"><b>CVPR Workshop</b></font>), 2018. </i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">New Trends in Image Restoration and Enhancement Workshop</i>
     </li>
 </section>
@@ -365,6 +367,13 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <div align= "center">
         <b>Any questions or cooperation are welcome.</b> </br>
         </div>   
+
+        <div align= "center">
+            <img src="recommend/zhihu.jpeg" width="200" height="200" /> 
+        </div> 
+        <div align= "center">
+        <b>Zhihu</b> </br>
+        </div> 
 </section>
 
 
