--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a>   Number of citations: 179</br>
+My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 Long-term co-authors: Kangfu MEI, ZENG Tieyong, Aiwen Jiang, Qiaosi Yi.
 </p>
@@ -140,7 +140,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
-        </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
@@ -148,7 +147,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 
     <li>
         <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
-        </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
@@ -157,7 +155,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <li>
         <b>【4】 Multi-level Edge Features Guided Network for Image Denoising </b> </br>
         【SCI-1, IF=8.739】
-        </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
@@ -290,7 +287,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Service:</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal</h1>
     <li>
         IEEE Transactions on Image Processing (TIP)
@@ -384,11 +381,6 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>
 
-<div align= "center">
-<section style="font-size: 0.5rem;" class="publications"></section>
-    <h1 style="font-size: 1rem; font-weight: bold;">Statistics from September 12, 2019</h1>
-</section>
-</div>
 
 <style>
     .publications li {
