--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
     </li>
@@ -148,6 +149,7 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
     <li>
         <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i> </br>
     </li>
@@ -364,6 +366,8 @@ I'm a Ph.D. student at School of Computer Science & Technology, East China Norma
         <div align= "center">
         <b>Any questions or cooperation are welcome.</b> </br>
         </div>   
+
+        </br>
 
         <div align= "center">
             <img src="recommend/zhihu.jpeg" width="200" height="200" /> 
